--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/google": "^3.0.22",
     "@google/generative-ai": "^0.24.1",
     "ai": "^6.0.77",
+    "browser-image-compression": "^2.0.2",
     "fast-check": "^4.5.3",
     "next": "16.1.6",
     "react": "19.2.3",
